// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Button Actif 1`] = `
<button
  className="actif"
>
  Button activé
</button>
`;

exports[`Storyshots components/Button Default Value 1`] = `
<button
  className="inactif"
  disabled={true}
/>
`;

exports[`Storyshots components/Button Initialized 1`] = `
<button
  className="inactif"
  disabled={true}
>
  Button désactivé
</button>
`;

exports[`Storyshots components/Header Default Value 1`] = `
<header>
  <div
    className="item-header"
  />
  <div
    className="item-header"
  />
</header>
`;

exports[`Storyshots components/Header Initialized 1`] = `
<header>
  <div
    className="item-header"
  >
    Bienvenue
  </div>
  <div
    className="item-header"
  >
    Sous titre
  </div>
</header>
`;

exports[`Storyshots components/Header Mini 1`] = `
<header
  className="mini"
>
  <div
    className="item-header"
  >
    Bienvenue
  </div>
  <div
    className="item-header"
  >
    Sous titre
  </div>
</header>
`;
